# rust-sqlite

./: Cargo.toml  sqlite.db
src/: main.rs
