[package]
name = "rust-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.13", features = ["sqlite", "runtime-async-std-native-tls"] }
async-std={version="1.6", features=["attributes"]}
futures="0.3.18"